changed lables, number of categories

--- a/kuwork/app/templates/index.html
+++ b/kuwork/app/templates/index.html
@@ -48,15 +48,13 @@
 </nav>
 
 <ul class="nav nav-pills nav-justified">
-  <li role="presentation" class="btn btn-lg" data-toggle="modal" data-target="#reservations"><a href="#">Reservations</a></li>
-  <li role="presentation" class="btn btn-lg" data-toggle="modal" data-target="#cars"><a href="#">Cars</a></li>
-  <li role="presentation" class="btn btn-lg" data-toggle="modal" data-target="#representatives"><a href="#">Customers</a></li>
+  <li role="presentation" class="btn btn-lg" data-toggle="modal" data-target="#activities"><a href="#">Activities</a></li>
+  <li role="presentation" class="btn btn-lg" data-toggle="modal" data-target="#Companies"><a href="#">Companies</a></li>
 </ul>
 
 <ul class="nav nav-pills nav-justified">
-  <li role="presentation" class="btn btn-lg" data-toggle="modal" data-target="#representatives"><a href="#"> Representatives</a></li>
-  <li role="presentation" class="btn btn-lg" data-toggle="modal" data-target="#maintenance"><a href="#"> Maintenance Costs</a></li>
-  <li role="presentation" class="btn btn-lg" data-toggle="modal" data-target="#corporations"><a href="#"> Corporations</a></li>
+  <li role="presentation" class="btn btn-lg" data-toggle="modal" data-target="#Residencies"><a href="#"> Residencies</a></li>
+  <li role="presentation" class="btn btn-lg" data-toggle="modal" data-target="#student"><a href="#"> Students</a></li>
 </ul>
 
 <!-- Search Modal -->
@@ -90,12 +88,12 @@
 </div>
 
 <!-- Modal -->
-<div class="modal fade" id="cars" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+<div class="modal fade" id="Companies" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="myModalLabel">Cars</h4>
+        <h4 class="modal-title" id="myModalLabel">Companies</h4>
       </div>
       <div class="modal-body">
         ...
@@ -109,12 +107,12 @@
 </div>
 
 <!-- Modal -->
-<div class="modal fade" id="representatives" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+<div class="modal fade" id="Residencies" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="myModalLabel">Representatives</h4>
+        <h4 class="modal-title" id="myModalLabel">Residencies</h4>
       </div>
       <div class="modal-body">
         ...
@@ -128,12 +126,12 @@
 </div>
 
 <!-- Modal -->
-<div class="modal fade" id="customers" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+<div class="modal fade" id="activities" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="myModalLabel">Customers</h4>
+        <h4 class="modal-title" id="myModalLabel">Activities</h4>
       </div>
       <div class="modal-body">
         ...
@@ -147,12 +145,12 @@
 </div>
 
 <!-- Modal -->
-<div class="modal fade" id="reservations" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+<div class="modal fade" id="student" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="myModalLabel">Reservations</h4>
+        <h4 class="modal-title" id="myModalLabel">Students</h4>
       </div>
       <div class="modal-body">
         ...
@@ -165,40 +163,3 @@
   </div>
 </div>
 
-<!-- Modal -->
-<div class="modal fade" id="maintenance" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="myModalLabel">Maintenance Costs</h4>
-      </div>
-      <div class="modal-body">
-        ...
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
-      </div>
-    </div>
-  </div>
-</div>
-
-<!-- Modal -->
-<div class="modal fade" id="corporation" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="myModalLabel">Corporations</h4>
-      </div>
-      <div class="modal-body">
-        ...
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
-      </div>
-    </div>
-  </div>
-</div>
