http service changes

--- a/kuwork/app/templates/index.html
+++ b/kuwork/app/templates/index.html
@@ -163,7 +163,7 @@
                 <h4 class="modal-title" id="myModalLabel">Students</h4>
               </div>
               <div class="modal-body">
-                <div ng-repeat="student in KUCtrl.studenList">
+                <div ng-repeat="student in KUCtrl.studentList">
                     {{student}}
                 </div>
               </div>
