--- a/django/kuwork/app/templates/index.html
+++ b/django/kuwork/app/templates/index.html
@@ -51,6 +51,11 @@
                 </div>
                 <button type="submit" class="btn btn-default">Submit</button>
               </form>
+              <li><a href="/activities">Activities</a></li>
+              <li><a href="/companies">Companies</a></li>
+              <li><a href="/residencies">Residencies</a></li>
+              <li><a href="/students">Students</a></li>
+
             </div><!-- /.navbar-collapse -->
           </div><!-- /.container-fluid -->
         </nav>
